--- a/src/app.html
+++ b/src/app.html
@@ -2,12 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<title>Classes at LAHS | lahs.+</title>
 		<meta name="description" content="" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
 	<body>
-		<div id="svelte">%svelte.body%</div>
+		%svelte.body%
 	</body>
 </html>
