Add split bar layout

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Classes at LAHS | lahs.+</title>
+		<title>Classes | lahs.+</title>
 		<meta name="description" content="" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
