--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700" rel="stylesheet">
 		%svelte.head%
 	</head>
 	<body>
