--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Classes | lahs.+</title>
 		<meta name="description" content="" />
+		<meta name="theme-color" content="#001" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700" rel="stylesheet">
